Use immutable list on mapping configurations