@@ -15,8 +15,6 @@ import de.focus_shift.jollyday.jackson.mapping.Holidays;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * see {@link }
  */
@@ -35,7 +33,9 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<FixedHolidayConfiguration> fixed() {
-    return holidays.getFixed().stream().map(JacksonFixed::new).collect(toList());
+    return holidays.getFixed().stream().map(JacksonFixed::new)
+      .map(FixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -45,7 +45,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<RelativeToFixedHolidayConfiguration> relativeToFixed() {
-    return holidays.getRelativeToFixed().stream().map(JacksonRelativeToFixed::new).collect(toList());
+    return holidays.getRelativeToFixed().stream()
+      .map(JacksonRelativeToFixed::new)
+      .map(RelativeToFixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -55,7 +58,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<RelativeToWeekdayInMonthHolidayConfiguration> relativeToWeekdayInMonth() {
-    return holidays.getRelativeToWeekdayInMonth().stream().map(JacksonRelativeToWeekdayInMonth::new).collect(toList());
+    return holidays.getRelativeToWeekdayInMonth().stream()
+      .map(JacksonRelativeToWeekdayInMonth::new)
+      .map(RelativeToWeekdayInMonthHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -65,7 +71,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<FixedWeekdayInMonthHolidayConfiguration> fixedWeekdays() {
-    return holidays.getFixedWeekday().stream().map(JacksonFixedWeekdayInMonth::new).collect(toList());
+    return holidays.getFixedWeekday().stream()
+      .map(JacksonFixedWeekdayInMonth::new)
+      .map(FixedWeekdayInMonthHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -75,7 +84,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<ChristianHolidayConfiguration> christianHolidays() {
-    return holidays.getChristianHoliday().stream().map(JacksonChristianHoliday::new).collect(toList());
+    return holidays.getChristianHoliday().stream()
+      .map(JacksonChristianHoliday::new)
+      .map(ChristianHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -85,7 +97,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<IslamicHolidayConfiguration> islamicHolidays() {
-    return holidays.getIslamicHoliday().stream().map(JacksonIslamicHoliday::new).collect(toList());
+    return holidays.getIslamicHoliday().stream()
+      .map(JacksonIslamicHoliday::new)
+      .map(IslamicHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -95,7 +110,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<FixedWeekdayBetweenFixedHolidayConfiguration> fixedWeekdayBetweenFixed() {
-    return holidays.getFixedWeekdayBetweenFixed().stream().map(JacksonFixedWeekdayBetweenFixed::new).collect(toList());
+    return holidays.getFixedWeekdayBetweenFixed().stream()
+      .map(JacksonFixedWeekdayBetweenFixed::new)
+      .map(FixedWeekdayBetweenFixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -105,7 +123,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<FixedWeekdayRelativeToFixedHolidayConfiguration> fixedWeekdayRelativeToFixed() {
-    return holidays.getFixedWeekdayRelativeToFixed().stream().map(JacksonFixedWeekdayRelativeToFixed::new).collect(toList());
+    return holidays.getFixedWeekdayRelativeToFixed().stream()
+      .map(JacksonFixedWeekdayRelativeToFixed::new)
+      .map(FixedWeekdayRelativeToFixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -115,7 +136,10 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<EthiopianOrthodoxHolidayConfiguration> ethiopianOrthodoxHolidays() {
-    return holidays.getEthiopianOrthodoxHoliday().stream().map(JacksonEthiopianOrthodoxHoliday::new).collect(toList());
+    return holidays.getEthiopianOrthodoxHoliday().stream()
+      .map(JacksonEthiopianOrthodoxHoliday::new)
+      .map(EthiopianOrthodoxHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -125,6 +149,9 @@ public class JacksonHolidays implements HolidayConfigurations {
    */
   @Override
   public List<RelativeToEasterSundayHolidayConfiguration> relativeToEasterSunday() {
-    return holidays.getRelativeToEasterSunday().stream().map(JacksonRelativeToEasterSunday::new).collect(toList());
+    return holidays.getRelativeToEasterSunday().stream()
+      .map(JacksonRelativeToEasterSunday::new)
+      .map(RelativeToEasterSundayHolidayConfiguration.class::cast)
+      .toList();
   }
 }
